--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="container">
+  <div class="banner">
+      <h2>New in town? Join or host activities to get to know new people. Match, meet & mingle!</h2>
+      <%= link_to "Search", events_path, class: "btn btn-flat btn-standard" %>
+      <%= image_tag "https://s3-alpha-sig.figma.com/img/995b/ab10/039b0c324b0ca8d8bfcbce7a8d8ce46a?Expires=1598227200&Signature=Ck7wHzUIwxhQtsQqdX-hUu5bumWGJjg-TNusAJ-qn0E8e69kCa6f5h6JUm5BRAb0IxzZCs-WgFsWMsJatzSnckAHD9SgMhMtswWllWK~MnP04Qkmr1aFkKDaUXqNQuwXaQow7uswiN1h0tHBa-w432FkENYCd4pQSSrfCuTpNp5d~6ZUq05SyMcXpHz5oPLPACOS8WBzF6Sr8G-VoUPLM~15OgjzvsJYu3Kc35rQb-ufvSM8I5NPmZcvEejMv2OvgdfhC6GPgtK~NNwfCTX~7ZKmIjhULVqz6AsMYAX1erzHuZfoTTby5YrPkUo7zzFClDOv466cN5HjTjBrW65jtg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" %>
+  </div>
+
+  <div class="section"><h2>Most famous activities nearby</h2></div>
+
+  <div class="cards">
+    <div class="card-category">
+      <div class="card-body-homepage">
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="section"><h2>What people say about CIRCL</h2></div>
+</div>
