--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Have a look at this awesome event</h1>
 
 <p class="btn btn-primary"><%= link_to "Back to all events", events_path %></p>
+<p class="btn btn-primary"><%= link_to "Request to join", new_event_request_path(@event) %></p>
