--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,26 +1,26 @@
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 1.5rem;            /* Footer height */
-}
-
-.footer-body {
-  background-color: $primary-color;
-  height: 150px;
+.footer {
+  background: $primary-color;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-top: 15px;
-  width: 100%;
-  margin-top: 120px;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
 }
 
-.media-logo {
-  width: 50px;
-  margin: 10px;
+.footer-links {
+  display: flex;
+  align-items: center;
 }
 
-.footer-part {
-  margin: 40px 100px
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+
+.footer-links a:hover {
+  opacity: 1;
 }
