--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,10 @@
 .navbar-circl {
   justify-content: space-between;
   background: white;
+  padding-right: 120px;
+  padding-left: 120px;
 }
 
 .navbar-circl .navbar-collapse {
   flex-grow: 0;
-}
-
-.navbar-circl .navbar-brand img {
-  
 }
