--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,27 +1,11 @@
-<footer>
-  <div class="footer-body">
-
-    <div class="footer-part">
-      <p>Copyright Circl 2020</p>
-    </div>
-
-    <div class="footer-part">
-      <h3>Get in Touch:</h3>
-      <p>Email: info@circl.com</p>
-      <p>Mobile: +49 1766 7921 643</p>
-    </div>
-
-    <div class="footer-part">
-      <a href="#">
-        <img class="media-logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-128.png">
-      </a>
-      <a href="#">
-        <img class="media-logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-128.png">
-      </a>
-      <a href="#">
-        <img class="media-logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-128.png">
-      </a>
-    </div>
-
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
-</footer>
+  <div class="footer-copyright">
+    Copyright Circl 2020
+  </div>
+</div>
