--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,13 +8,21 @@
                     <div class="col-lg-6">
                         <div class="card card-index" style="width: 18rem;">
                             <div class="card-body card-body-index">
-                                <img class="card-img-index" src="https://source.unsplash.com/random" alt="">
+                                <% if event.image.attached?  %>
+                                    <%= cl_image_tag event.image.key, class: "card-img-index" %>
+                                <% else %>
+                                    <img class="card-img-index" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
+                                <% end %>
                                 <div class="row">
                                     <div class="col-4 user-name-index">
                                         <p>Name, 36</p>
                                     </div>
                                     <div class="col-4 profile-pic-index">
-                                        <img src="https://source.unsplash.com/user/aiony" alt="">
+                                        <% if event.user.image.attached? %>
+                                            <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
+                                        <% else %>
+                                            <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
+                                        <% end %>
                                     </div>
                                     <div class="col-4 user-social-icons">
                                         <i class="fab fa-linkedin-in fa-lg"></i>
@@ -31,7 +39,7 @@
             </div>
         </div>
         <div class="col-lg-6">
-            <div class="map-style">
+            <div class="map-style-index">
                 <div id="map"
                     style="width:52%; height: 800px;"
                     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
