--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,6 @@
 @import "components/index";
 @import "pages/index";
 @import "components/button";
+@import "pages/profile_show";
+@import "pages/show";
+
