--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,128 +1,125 @@
-<div class="banner-homepage">
+<section class="banner-section bg-white">
+  <div class="d-grid banner-grid">
 
-  <div class="row">
+    <div class="d-flex flex-column align-items-center justify-content-center banner-homepage-left">
+      <h2 class="mb-6">New in town? Join or host activities to get to know new people. Match, meet & mingle!</h2>
 
-    <div class="col-sm-4 banner-homepage-left">
-      <div class="row">
-        <h2>New in town? Join or host activities to get to know new people. Match, meet & mingle!</h2>
-        <div class="row">
-          <div class="col">
-            Enter your city
-          </div>
-          <div class="col">
-            <%= link_to "Search", events_path, class: "btn btn-flat" %>
-          </div>
+      <div class="d-flex justify-content-between">
+        <div class="homepage-section-input">
+          <input class="form-control" type="text" placeholder="Enter your city" readonly>
         </div>
+        <%= link_to "Search", events_path, class: "btn btn-flat" %>
       </div>
     </div>
 
-    <div class="col-sm-8 banner-homepage-right">
+    <div class="banner-homepage-right">
       <%= image_tag "https://s3-alpha-sig.figma.com/img/995b/ab10/039b0c324b0ca8d8bfcbce7a8d8ce46a?Expires=1598227200&Signature=Ck7wHzUIwxhQtsQqdX-hUu5bumWGJjg-TNusAJ-qn0E8e69kCa6f5h6JUm5BRAb0IxzZCs-WgFsWMsJatzSnckAHD9SgMhMtswWllWK~MnP04Qkmr1aFkKDaUXqNQuwXaQow7uswiN1h0tHBa-w432FkENYCd4pQSSrfCuTpNp5d~6ZUq05SyMcXpHz5oPLPACOS8WBzF6Sr8G-VoUPLM~15OgjzvsJYu3Kc35rQb-ufvSM8I5NPmZcvEejMv2OvgdfhC6GPgtK~NNwfCTX~7ZKmIjhULVqz6AsMYAX1erzHuZfoTTby5YrPkUo7zzFClDOv466cN5HjTjBrW65jtg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA", class: "main-banner-img" %>
     </div>
-
   </div>
-</div>
+</section>
 
-<div class="activities-section">
-
+<section class="activities-section">
   <h2>Most famous activities nearby</h2>
-
-  <div class="row">
-    <div class="homepage-cards">
-
-      <div class="card card-homepage" style="width: 18rem;">
-        <div class="card-body card-body-homepage">
-          <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
-          <div class="row">
-            <div class="col-4 user-name-homepage">
-              <p>Name, 36</p>
+  <div class="homepage-cards">
+    <div class="row">
+      <div class="col-4">
+        <div class="card card-homepage">
+          <div class="card-body card-body-homepage">
+            <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
+            <div class="row">
+              <div class="col-4 user-name-homepage">
+                <p>Name, 36</p>
+              </div>
+              <div class="col-4 profile-pic-homepage">
+                <img src="https://source.unsplash.com/user/aiony" alt="">
+              </div>
+              <div class="col-4 user-social-icons">
+                <i class="fab fa-linkedin-in fa-lg"></i>
+                <i class="fab fa-instagram fa-lg"></i>
+              </div>
             </div>
-            <div class="col-4 profile-pic-homepage">
-              <img src="https://source.unsplash.com/user/aiony" alt="">
-            </div>
-            <div class="col-4 user-social-icons">
-              <i class="fab fa-linkedin-in fa-lg"></i>
-              <i class="fab fa-instagram fa-lg"></i>
-            </div>
+            <p class="card-title title-homepage"></p>
+            <p class="card-text date-homepage"></p>
+            <b>Activity Name</b>
+            <br>
+            <p>Date & Time</p>
+            <br>
+            <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
           </div>
-          <p class="card-title title-homepage"></p>
-          <p class="card-text date-homepage"></p>
-          <b>Activity Name</b>
-          <br>
-          <p>Date & Time</p>
-          <br>
-          <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
         </div>
-      </div>
-
-      <div class="card card-homepage" style="width: 18rem;">
-        <div class="card-body card-body-homepage">
-          <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
-          <div class="row">
-            <div class="col-4 user-name-homepage">
-              <p>Name, 36</p>
-            </div>
-            <div class="col-4 profile-pic-homepage">
-              <img src="https://source.unsplash.com/user/aiony" alt="">
-            </div>
-            <div class="col-4 user-social-icons">
-              <i class="fab fa-linkedin-in fa-lg"></i>
-              <i class="fab fa-instagram fa-lg"></i>
-            </div>
-          </div>
-          <p class="card-title title-homepage"></p>
-          <p class="card-text date-homepage"></p>
-          <b>Activity Name</b>
-          <br>
-          <p>Date & Time</p>
-          <br>
-          <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
-        </div>
-      </div>
-
-      <div class="card card-homepage" style="width: 18rem;">
-        <div class="card-body card-body-homepage">
-          <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
-          <div class="row">
-            <div class="col-4 user-name-homepage">
-              <p>Name, 36</p>
-            </div>
-            <div class="col-4 profile-pic-homepage">
-              <img src="https://source.unsplash.com/user/aiony" alt="">
-            </div>
-            <div class="col-4 user-social-icons">
-              <i class="fab fa-linkedin-in fa-lg"></i>
-              <i class="fab fa-instagram fa-lg"></i>
-            </div>
-          </div>
-          <p class="card-title title-homepage"></p>
-          <p class="card-text date-homepage"></p>
-          <b>Activity Name</b>
-          <br>
-          <p>Date & Time</p>
-          <br>
-          <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<div class="reviews-section">
-
-  <h2>What people say about <strong>CIRCL</strong></h2>
-
-  <div class="review-card">
-  <img src="https://kitt.lewagon.com/placeholder/users/paul-wittchen" class="avatar-large" />
-  <div class="review-card-infos">
-    <div>
-      <h3>Paul Wittchen, 26</h3>
-      <p>“Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
     </div>
     
+    <div class="col-4">
+      <div class="card card-homepage">
+        <div class="card-body card-body-homepage">
+            <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
+            <div class="row">
+              <div class="col-4 user-name-homepage">
+                <p>Name, 36</p>
+              </div>
+              <div class="col-4 profile-pic-homepage">
+                <img src="https://source.unsplash.com/user/aiony" alt="">
+              </div>
+              <div class="col-4 user-social-icons">
+                <i class="fab fa-linkedin-in fa-lg"></i>
+                <i class="fab fa-instagram fa-lg"></i>
+              </div>
+            </div>
+            <p class="card-title title-homepage"></p>
+            <p class="card-text date-homepage"></p>
+            <b>Activity Name</b>
+            <br>
+            <p>Date & Time</p>
+            <br>
+            <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
+          </div>
+        </div>
+    </div>
+
+    <div class="col-4">
+      <div class="card card-homepage">
+        <div class="card-body card-body-homepage">
+          <img class="card-img-homepage" src="https://source.unsplash.com/random" alt="">
+            <div class="row">
+              <div class="col-4 user-name-homepage">
+                <p>Name, 36</p>
+              </div>
+              <div class="col-4 profile-pic-homepage">
+                <img src="https://source.unsplash.com/user/aiony" alt="">
+              </div>
+              <div class="col-4 user-social-icons">
+                <i class="fab fa-linkedin-in fa-lg"></i>
+                <i class="fab fa-instagram fa-lg"></i>
+              </div>
+            </div>
+            <p class="card-title title-homepage"></p>
+            <p class="card-text date-homepage"></p>
+            <b>Activity Name</b>
+            <br>
+            <p>Date & Time</p>
+            <br>
+            <%= link_to "See more details",  class: "btn-standard btn-homepage" %>
+          </div>
+        </div>
+    </div>
+
+    </div>
   </div>
-</div>
 
+</section>
 
-</div>
+<section class="reviews-section bg-white">
+  <h2>What people say about <strong>CIRCL</strong></h2>
+  <div class="review-card">
+    <div class="d-flex d-flex-column justify-content-center">
+      <img src="https://kitt.lewagon.com/placeholder/users/paul-wittchen" class="avatar-large" />
+    </div>
+    <div class="review-card-infos">
+      <div>
+        <h3>Paul Wittchen, 26</h3>
+        <p>“Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+      </div>
+      
+    </div>
+  </div>
+</section>
