--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,16 +21,20 @@
     <% end %>
 
     <% if user_signed_in? %>
-    <li class="nav-item">
+      <li class="nav-item">
+        <%= link_to "Create event", new_event_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "See all events", events_path, class: "nav-link" %>
       </li>
-    <li class="nav-item dropdown">
-      <%= image_tag "https://kitt.lewagon.com/placeholder/users/petermagpantay", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-      </div>
-    </li>
-  <% end %>
+      <li class="nav-item dropdown">
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/petermagpantay", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Dashboard", requests_path, method: :delete, class: "dropdown-item" %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+      </li>
+    <% end %>
     </ul>
 
   </div>
