editing profile is possible now

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,5 +5,7 @@
   <p><strong>Last Name:</strong> <%= @profile.last_name %></p>
   <p><strong>Age:</strong> <%= @profile.age %></p>
   <p><strong>Bio:</strong> <%= @profile.bio %></p>
-  <%= link_to "Edit my Profile"%><%#Here we have to insert the edit link%>
+  <% if policy(@profile).edit? %>
+    <%= link_to "Edit my Profile", edit_user_registration_path(@profile) %><%#Here we have to insert the edit link%>
+  <% end %>
 </div>
