--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,20 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :first_name,
+                required: true,
+                autofocus: true %>
+    <%= f.input :last_name,
+                required: true,
+                autofocus: true %>
+    <%= f.input :user_name,
+                required: true,
+                autofocus: true %>
+    <%= f.input :age,
+                required: true,
+                autofocus: true %>
+    <%= f.input :bio,
+                autofocus: true %>
   </div>
 
   <div class="form-actions">
