--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,17 @@
 .navbar-circl {
   justify-content: space-between;
   background: white;
+  position: fixed !important;
+  z-index: 1000;
+  width: 100%;
 }
 
 .navbar-circl .navbar-collapse {
   flex-grow: 0;
 }
+
+// .fixed-content {
+//   position:fixed;
+//   overflow-y:scroll;
+//   overflow-x:hidden;
+// }
