--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,6 +45,7 @@
   padding-bottom: 64px;
   padding-left: 120px;
   padding-right: 120px;
+  background: rgba(196, 196, 196, 0.49);
   h2 {
     padding-bottom: 72px;
   }
