--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-circl">
+<div class="navbar navbar-expand-sm navbar-light navbar-circl fixed-content">
 
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
@@ -13,6 +13,9 @@
     <ul class="navbar-nav mr-auto">
     <% if !user_signed_in? %>
       <li class="nav-item">
+        <%= link_to "Partner with us", events_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
@@ -26,6 +29,9 @@
       </li>
       <li class="nav-item">
         <%= link_to "See all events", events_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Partner with us", events_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/petermagpantay", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
