--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -71,54 +71,54 @@
   transform: scale(1);
   transition: $standard-transition;
   &:hover {
-      transform: scale(1.04);
+    transform: scale(1.04);
   }
 
   .title-homepage {
-      text-align: center;
-      font-size: 20px;
-      padding: 0px 8px;
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 8px;
   }
 
   .card-img-homepage {
-      border-radius: $standard-radius $standard-radius 0 0;
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
+    border-radius: $standard-radius $standard-radius 0 0;
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
   }
 
   .user-name-homepage {
-      margin-left: 8px;
-      margin-top: 8px;
+    margin-left: 8px;
+    margin-top: 8px;
   }
 
   .user-social-icons {
-      margin-right: -8px;
-      margin-top: 8px;
-      color: $primary-color;
-      i {
-          padding-right: 8px;
-      }
+    margin-right: -8px;
+    margin-top: 8px;
+    color: $primary-color;
+    i {
+      padding-right: 8px;
+    }
   }
 
   .date-homepage {
-      margin-bottom: 40px;
+    margin-bottom: 40px;
   }
 
   .profile-pic-homepage {
-      text-align: center;
-      img {
-          margin-left: -8px;
-          border-radius: 50%;
-          width: 80px;
-          height: 80px;
-          object-fit: cover;
-          margin-top: -40px;
-          box-shadow: $standard-shadow;
-      }
-      i {
-          float: right;
-      }
+    text-align: center;
+    img {
+      margin-left: -8px;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      margin-top: -40px;
+      box-shadow: $standard-shadow;
+    }
+    i {
+      float: right;
+    }
   }
 }
 
@@ -140,7 +140,7 @@
 .review-card {
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .avatar-large {
@@ -160,7 +160,7 @@
 
 .review-card p {
   font-size: 16px;
-  opacity: .7;
+  opacity: 0.7;
   margin: 0;
   text-align: center;
   padding-bottom: 16px;
