--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,8 +21,9 @@
     <% end %>
 
     <% if user_signed_in? %>
-    <li class="nav-item">
+    <li class="nav-item nav-inline-block">
         <%= link_to "See all events", events_path, class: "nav-link" %>
+        <%= link_to "See all my requests", requests_path, class: "nav-link" %>
       </li>
     <li class="nav-item dropdown">
       <%= image_tag "https://kitt.lewagon.com/placeholder/users/petermagpantay", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
