--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -154,6 +154,11 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  transform: scale(1);
+  transition: $standard-transition;
+  &:hover {
+    transform: scale(1.04);
+  }
 }
 
 .avatar-large {
