--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,6 +35,7 @@
                 autofocus: true %>
     <%= f.input :bio,
                 autofocus: true %>
+    <%= f.file_field :image %>
   </div>
 
   <div class="form-actions">
