--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,6 +29,7 @@
                 autofocus: true %>
     <%= f.input :bio,
                 autofocus: true %>
+    <%= f.input :image, as: :file %>
   </div>
 
   <div class="form-actions">
