--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,9 +1,9 @@
 <div class="profile_body">
   <%=link_to "Back" %>
   <h1><%= @profile.first_name %>'s Profile</h1>
-  <%# if @profile.image.attached? %>
+  <% if @profile.image.attached? %>
     <%= cl_image_tag @profile.image.key, height: 300, width: 400, crop: :fill %>
-  <%# end %>
+  <% end %>
   <p><strong>First Name:</strong> <%= @profile.first_name %></p>
   <p><strong>Last Name:</strong> <%= @profile.last_name %></p>
   <p><strong>Age:</strong> <%= @profile.age %></p>
