--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,9 +34,13 @@
         <%= link_to "Partner with us", events_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/petermagpantay", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% if current_user.image.attached? %>
+          <%= cl_image_tag current_user.image.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% else %>
+          <%= image_tag "https://image.flaticon.com/icons/svg/206/206853.svg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% end %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Show Profile", profile_path(:id), class: "dropdown-item" %>
+          <%= link_to "Show Profile", profile_path(current_user), class: "dropdown-item" %>
           <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
           <%= link_to "Dashboard", requests_path, method: :delete, class: "dropdown-item" %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
