--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,7 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%#= f.label :first_name, "First Name:" %>
     <%= f.input :first_name,
                 required: true,
                 autofocus: true %>
@@ -35,6 +36,13 @@
                 autofocus: true %>
     <%= f.input :bio,
                 autofocus: true %>
+    <% if current_user.image.attached? %>
+      <p>Current Image:</p>
+      <%= cl_image_tag current_user.image.key, height: 300, width: 400, crop: :fill %>
+    <% else %>
+      <p>Currently no profile image<p>
+    <% end %>
+    <p>Upload local profile image</p>
     <%= f.file_field :image %>
   </div>
 
@@ -43,8 +51,4 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, class:"btn btn-primary" %>
