geocoding and maps implemented

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -20,7 +20,8 @@
 }
 
 .desc-show {
-    margin-top: 40px;
+    margin-top: 80px;
+    margin-bottom: 72px;
     padding: 0px 80px;
     font-size: $font-size-subheader;
 }
