--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,11 @@
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+
 <div class="header-show-page">
   <div class="row">
     <div class="col-6 col-md-4 text-show">
       <p class="show-header"><%= @event.title %></p>
       <p>You will meet & mingle with</p>
-      <p>host: <%=  @event.user.user_name %> </p>
+      <p>host: <%= @event.user.user_name %> </p>
       <p>invited : <% @accepted.each do |user| %>
           <%= user.user_name %>
         <% end %></p>
@@ -24,10 +26,8 @@
 </div>
 <div class="map-style-show">
   <div id="map"
-        style="width:90%; height: 400px;"
+        style="width:100%; height: 400px;"
+        data-markers="<%= @marker.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
-
-<p class="btn btn-primary"><%= link_to "Back to all events", events_path %></p>
-<p class="btn btn-primary"><%= link_to "Request to join", new_event_request_path(@event) %></p>
