backend show profile page done

--- a/app/assets/stylesheets/config/_vars.scss
+++ b/app/assets/stylesheets/config/_vars.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400&display=swap');
 
 $primary-color: #61E8DC;
-$secondary-color: #fffbfa;
+$secondary-color: #C4C4C4;
 
 $standard-font: 'Roboto', sans-serif, 200;
 $header-font: 'Roboto', sans-serif, 400;
