--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -1,4 +1,143 @@
-.profile_body {
-  width: 60%;
-  margin: 0 auto
+//scss file for profile show page
+
+// profile-top section
+.d-grid{
+  display: grid;
+}
+
+.banner-grid{
+  grid-template-columns: 2fr 3fr;
+  margin-right: -2rem;
+  z-index: 2;
+}
+
+.profile-top-left {
+  padding-bottom: 64px;
+  padding-left: 120px;
+  h2 {
+    text-align: left;
+    font-size: 40px;
+    text-shadow: 0px 0px 4px lightgrey;
+  }
+  h3 {
+    font-size: 32px;
+    color: $secondary-color;
+  }
+  h4 {
+    font-size: 16px;
+    color: $secondary-color
+  }
+}
+
+.profile-top-right {
+  padding-bottom: 64px;
+  background-color: white;
+}
+
+// profile-requests-section
+.profile-requests-section {
+  padding-top: 64px;
+  padding-bottom: 64px;
+  padding-left: 120px;
+  padding-right: 120px;
+  background: rgba(196, 196, 196, 0.49);
+  h2 {
+    padding-bottom: 72px;
+  }
+}
+
+.profile-cards {
+  text-align: center;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr 1fr;
+  // grid-gap: 16px;
+}
+
+.header-profile {
+  text-align: center;
+  margin: 40px;
+  font-size: $font-size-header;
+  font-family: $header-font;
+}
+
+.con {
+  padding: 0px 80px;
+}
+
+.card-body {
+  padding: 0px;
+}
+
+.card-profile {
+  border: none;
+  border-radius: $standard-radius;
+  box-shadow: $standard-shadow;
+  margin-bottom: 24px;
+  text-align: center;
+  padding-bottom: 40px;
+  min-height: 360px;
+  transform: scale(1);
+  transition: $standard-transition;
+  &:hover {
+    transform: scale(1.04);
+  }
+
+  .title-profile {
+    text-align: center;
+    font-size: 20px;
+    padding: 0px 8px;
+  }
+
+  .card-img-profile {
+    border-radius: $standard-radius $standard-radius 0 0;
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+  }
+
+  .user-name-profile {
+    margin-left: 8px;
+    margin-top: 8px;
+  }
+
+  .user-social-icons {
+    margin-right: -8px;
+    margin-top: 8px;
+    color: $primary-color;
+    i {
+      padding-right: 8px;
+    }
+  }
+
+  .date-profile {
+    margin-bottom: 40px;
+  }
+
+  .profile-pic-profile {
+    text-align: center;
+    img {
+      margin-left: -8px;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      margin-top: -40px;
+      box-shadow: $standard-shadow;
+    }
+    i {
+      float: right;
+    }
+  }
+}
+
+// profile-events-section
+.profile-events-section {
+  padding-top: 64px;
+  padding-bottom: 64px;
+  padding-left: 120px;
+  padding-right: 120px;
+  background:white;
+  h2 {
+    padding-bottom: 72px;
+  }
 }
