--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,11 +25,10 @@
 
     <% if user_signed_in? %>
     <li class="nav-item nav-inline-block">
-        <%= link_to "See all events", events_path, class: "nav-link" %>
-        <%= link_to "See all my requests", requests_path, class: "nav-link" %>
+        <%= link_to "Browse events", events_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Partner with us", events_path, class: "nav-link" %>
+        <%= link_to "Create event", new_event_path, class: "nav-link" %>  
       </li>
       <li class="nav-item dropdown">
         <% if current_user.image.attached? %>
@@ -40,7 +39,6 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Show Profile", profile_path(current_user), class: "dropdown-item" %>
           <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-          <%= link_to "Dashboard", requests_path, method: :delete, class: "dropdown-item" %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
       </li>
