--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -35,3 +35,10 @@
     text-align: center;
     margin: 0 auto;
 }
+
+.show-img-participant {
+    border-radius: 50%;
+    height: 56px;
+    width: 56px;
+    object-fit: cover;
+}
