--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,11 +4,25 @@
   <div class="row">
     <div class="col-6 col-md-4 text-show">
       <p class="show-header"><%= @event.title %></p>
+      <p class="date-show"><i class="far fa-calendar-alt fa-1x"></i> <%= @event.event_time.strftime("%-d %B %Y, %-l:%M%p") %></p>
+      <p class="location-show"><i class="fas fa-map-marker-alt fa-1x"></i> <%= @event.location %></p>
       <p>You will meet & mingle with</p>
-      <p>host: <%= @event.user.user_name %> </p>
-      <p>invited : <% @accepted.each do |user| %>
-          <%= user.user_name %>
-        <% end %></p>
+      <p>HOST:
+      <% if @event.user.image.attached?  %>
+        <%= cl_image_tag @event.user.image.key, class: "show-img-participant" %>
+      <% else %>
+        <img class="show-img-participant" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
+      <% end %>
+      </p>
+      <p>PARTICIPENTS :
+        <% @accepted.each do |user| %>
+          <% if user.image.attached?  %>
+            <%= cl_image_tag user.image.key, class: "show-img-participant" %>
+          <% else %>
+            <img class="show-img-participant" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
+          <% end %>
+        <% end %>
+      </p>
     </div>
     <div class="col-sm-6 col-md-8">
       <% if @event.image.attached?  %>
@@ -20,7 +34,8 @@
   </div>
 </div>
 <%= link_to "Back to all events", events_path, class: "btn-standard btn-show" %>
-<%= link_to "Request to join", new_event_request_path(@event), class: "btn-standard" %>
+<%= link_to "Request to join", new_event_request_path(@event), class: "btn btn-standard", id: "req-btn" %>
+<p class="show-req-status d-none" id="req-status"><%= @event.requests[0].status %></p>
 <div class="desc-show-page">
   <p class="desc-show"><%= @event.description %></p>
 </div>
