--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,5 @@
-<h1>New Request for the Event: <%= @event.title %></h1>
+<p class="request-title">New Request for the Event: <%= @event.title %></p>
 
 <%= form_for(@request, url:event_requests_path) do |f| %>
   <%= f.submit %>
 <% end %>
-
-<p class="btn btn-primary"><%= link_to "Confirm", event_requests_path %></p>
