--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         <div class="homepage-section-input">
           <input class="form-control" type="text" placeholder="Enter your city" readonly>
         </div>
-        <%= link_to "Search", events_path, class: "btn btn-flat" %>
+        <%= link_to "Search", events_path, class: "btn-standard" %>
       </div>
     </div>
 
