request as host and as guest

--- a/app/assets/stylesheets/components/_requestCard.scss
+++ b/app/assets/stylesheets/components/_requestCard.scss
@@ -1,9 +1,17 @@
 .card-request {
   overflow: hidden;
-  height: 120px;
-  max-width: 30%;
-
+  width: 50%;
   background: white;
+  background: red;
+  display: flex;
+  align-items: center;
+  margin: 0px 0px 16px 0px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.card-request-host {
+  background: white;
+  background: red;
   display: flex;
   align-items: center;
   margin: 0px 0px 16px 0px;
