--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="header-index">Choose among 1234 activities</h1>
+<h1 class="header-index">Choose among <%= Event.count %> activities</h1>
 
 <div class="con">
     <div class="row">
