--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,51 +1,46 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-circl fixed-content">
-
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
-
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
     <ul class="navbar-nav mr-auto">
-    <% if !user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "Partner with us", events_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-      </li>
-    <% end %>
-
-    <% if user_signed_in? %>
-    <li class="nav-item nav-inline-block">
-        <%= link_to "See all events", events_path, class: "nav-link" %>
-        <%= link_to "See all my requests", requests_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Partner with us", events_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item dropdown">
-        <% if current_user.image.attached? %>
-          <%= cl_image_tag current_user.image.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <% else %>
-          <%= image_tag "https://image.flaticon.com/icons/svg/206/206853.svg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <% end %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Show Profile", profile_path(current_user), class: "dropdown-item" %>
-          <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-          <%= link_to "Dashboard", requests_path, method: :delete, class: "dropdown-item" %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-        </div>
-      </li>
-    <% end %>
+      <% if !user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Partner with us", events_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+      <% if user_signed_in? %>
+        <li class="nav-item nav-inline-block">
+          <%= link_to "See all events", events_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item nav-inline-block">
+          Welcome back <strong>
+            <%= current_user.user_name %></strong>!<br>
+           Good to see you again! 😃 
+        </li>
+        <li class="nav-item dropdown">
+          <% if current_user.image.attached? %>
+            <%= cl_image_tag current_user.image.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% else %>
+            <%= image_tag "https://image.flaticon.com/icons/svg/206/206853.svg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Show Profile", profile_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
+            <%= link_to "Dashboard", requests_path,class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% end %>
     </ul>
-
   </div>
 </div>
