request dashboard host/guest

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,50 +1,49 @@
 <h1 class="header-index">Choose among <%= Event.count %> activities</h1>
-
 <div class="con">
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="row">
-                <% @events.each do |event| %>
-                    <div class="col-lg-6">
-                        <div class="card card-index" style="width: 18rem;">
-                            <div class="card-body card-body-index">
-                                <% if event.image.attached?  %>
-                                    <%= cl_image_tag event.image.key, class: "card-img-index" %>
-                                <% else %>
-                                    <img class="card-img-index" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
-                                <% end %>
-                                <div class="row">
-                                    <div class="col-4 user-name-index">
-                                        <p>Name, 36</p>
-                                    </div>
-                                    <div class="col-4 profile-pic-index">
-                                        <% if event.user.image.attached? %>
-                                            <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
-                                        <% else %>
-                                            <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
-                                        <% end %>
-                                    </div>
-                                    <div class="col-4 user-social-icons">
-                                        <i class="fab fa-linkedin-in fa-lg"></i>
-                                        <i class="fab fa-twitter fa-lg"></i>
-                                    </div>
-                                </div>
-                                <p class="card-title title-index"><%= event.title %></p>
-                                <p class="card-text date-index"><%= event.event_time %></p>
-                                <%= link_to "See more details", event_path(event), class: "btn-standard btn-index" %>
-                            </div>
-                        </div>
-                    </div>
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="row">
+        <% @events.each do |event| %>
+          <div class="col-lg-6">
+            <div class="card card-index" style="width: 18rem;">
+              <div class="card-body card-body-index">
+                <% if event.image.attached?  %>
+                  <%= cl_image_tag event.image.key, class: "card-img-index" %>
+                <% else %>
+                  <img class="card-img-index" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
                 <% end %>
+                <div class="row">
+                  <div class="col-4 user-name-index">
+                    <p><%= event.user.user_name %>, <%= event.user.age %>.</p>
+                  </div>
+                  <div class="col-4 profile-pic-index">
+                    <% if event.user.image.attached? %>
+                      <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
+                    <% else %>
+                      <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
+                    <% end %>
+                  </div>
+                  <div class="col-4 user-social-icons">
+                    <i class="fab fa-linkedin-in fa-lg"></i>
+                    <i class="fab fa-twitter fa-lg"></i>
+                  </div>
+                </div>
+                <p class="card-title title-index"><%= event.title %></p>
+                <p class="card-text date-index"><%= event.event_time %></p>
+                <%= link_to "See more details", event_path(event), class: "btn-standard btn-index" %>
+              </div>
             </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="map-style-index">
-                <div id="map"
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="map-style-index">
+        <div id="map"
                     style="width:52%; height: 800px;"
                     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-                </div>
-            </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
