--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,83 +1,67 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+
 <section>
-  <div class="">
-    <%= form_tag events_path, method: :get do %>
-      <%= text_field_tag :query,
+    <div class="">
+        <%= form_tag events_path, method: :get do %>
+            <%= text_field_tag :query,
                 params[:query],
                 class: "form-control-search-index",
                 placeholder: "Type in a location"
             %>
-      <%= submit_tag "Search", class: "btn-standard submit-btn-search" %>
-    <% end %>
-  </div>
+            <%= submit_tag "Search", class: "btn-standard submit-btn-search" %>
+        <% end %>
+    </div>
 </section>
 <p class="header-index">We found <strong><%= @events.count %></strong> events for you</p>
+
+
 <div class="con">
-  <div class="row">
-    <div class="col-lg-6">
-      <div class="row">
-        <% @events.each do |event| %>
-          <div class="col-lg-6">
-            <div class="card card-index" style="width: 18rem;">
-              <div class="card-body card-body-index">
-                <% if event.image.attached?  %>
-                  <%= cl_image_tag event.image.key, class: "card-img-index" %>
-                <% else %>
-                  <img class="card-img-index" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="row">
+                <% @events.each do |event| %>
+                    <div class="col-lg-6">
+                        <div class="card card-index" style="width: 18rem;">
+                            <div class="card-body card-body-index">
+                                <% if event.image.attached?  %>
+                                    <%= cl_image_tag event.image.key, class: "card-img-index" %>
+                                <% else %>
+                                    <img class="card-img-index" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
+                                <% end %>
+                                <div class="row">
+                                    <div class="col-4 user-name-index">
+                                        <p><%= event.user.first_name %>, <%= event.user.age %></p>
+                                    </div>
+                                    <div class="col-4 profile-pic-index">
+                                        <% if event.user.image.attached? %>
+                                            <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
+                                        <% else %>
+                                            <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
+                                        <% end %>
+                                    </div>
+                                    <div class="col-4 user-social-icons">
+                                        <i class="fab fa-linkedin-in fa-lg"></i>
+                                        <i class="fab fa-twitter fa-lg"></i>
+                                    </div>
+                                </div>
+                                <p class="card-title title-index"><%= event.title %></p>
+                                <%# <p><%= event.location %></p>
+                                <p class="card-text date-index"><%= event.event_time %></p>
+                                <%= link_to "See more details", event_path(event), class: "btn-standard btn-index" %>
+                            </div>
+                        </div>
+                    </div>
                 <% end %>
-                <div class="row">
-                  <div class="col-4 user-name-index">
-                    <p><%= event.user.first_name %>, <%= event.user.age %></p>
-                  </div>
-                  <div class="col-4 profile-pic-index">
-                    <% if event.user.image.attached? %>
-                      <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
-                    <% else %>
-                      <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
-                    <% end %>
-                  </div>
-                  <div class="col-4 user-social-icons">
-                    <i class="fab fa-linkedin-in fa-lg"></i>
-                    <i class="fab fa-twitter fa-lg"></i>
-                  </div>
-                </div>
-                <p class="card-title title-index"><%= event.title %></p>
-                <p class="card-text date-index"><%= event.event_time.strftime("%-d %B %Y, %-l:%M%p") %></p>
-                <%= link_to "See more details", event_path(event), class: "btn-standard btn-index" %>
-              </div>
             </div>
-          </div>
-        <% end %>
-        <div class="row">
-          <div class="col-4 user-name-index">
-            <p><%= event.user.user_name %>, <%= event.user.age %>.</p>
-          </div>
-          <div class="col-4 profile-pic-index">
-            <% if event.user.image.attached? %>
-              <%= cl_image_tag event.user.image.key, class: "profile-pic-index" %>
-            <% else %>
-              <img class="profile-pic-index" src="https://source.unsplash.com/2LowviVHZ-E" alt="">
-            <% end %>
-          </div>
-          <div class="col-4 user-social-icons">
-            <i class="fab fa-linkedin-in fa-lg"></i>
-            <i class="fab fa-twitter fa-lg"></i>
-          </div>
         </div>
-        <p class="card-title title-index"><%= event.title %></p>
-        <p class="card-text date-index"><%= event.event_time %></p>
-        <%= link_to "See more details", event_path(event), class: "btn-standard btn-index" %>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="map-style-index">
-      <div id="map"
+        <div class="col-lg-6">
+            <div class="map-style-index">
+                <div id="map"
                     style="width:100%; height: 1000px;"
                     data-markers="<%= @markers.to_json %>"
                     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </div>
