validate request accept + reject

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -32,7 +32,7 @@
     </div>
   </div>
 <% end %>
-<h3>Your requests as <strong>INVITED</strong></h3>
+<h3>Your requests as <strong>GUEST</strong></h3>
 <p>Check soon to see who are you meeting with !</p>
 <% @guest_event_requests.each do |request| %>
   <div class="cards">
