social media now implemented, right now only visible in edit and in event index cards

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -69,6 +69,8 @@
         margin-right: -8px;
         margin-top: 8px;
         color: $primary-color;
+        padding: 0;
+        padding-right: 15px;
         i {
             padding-right: 8px;
         }
