autocomplete feature implemented

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,8 +12,8 @@
         <% end %>
     </div>
 </section>
-<% if @events.count >= 1 %>
-  <p class="header-index">We found <strong><%= @events.count %></strong> events for you</p>
+<% if @events.size >= 1 %>
+  <p class="header-index">We found <strong><%= @events.size %></strong> events for you</p>
 <% else %>
   <p class="header-index">
   We are sorry, it seems like there are no events in this city
